@@ -92,8 +92,11 @@ func_guile (char *o, char **argv, const char *funcname UNUSED)
   if (argv[0] && argv[0][0] != '\0')
     {
       char *str = scm_with_guile (internal_guile_eval, argv[0]);
-      o = variable_buffer_output (o, str, strlen (str));
-      free (str);
+      if (str)
+        {
+          o = variable_buffer_output (o, str, strlen (str));
+          free (str);
+        }
     }
 
   return o;
