@@ -1,3 +1,7 @@
+2012-01-17  Paul Smith  <psmith@gnu.org>
+
+	* guile.c (func_guile): Handle NULL returns from Guile.
+
 2012-01-16  Paul Smith  <psmith@gnu.org>
 
 	* make.h (PATH_SEPARATOR_CHAR): Allow resetting for crosscompiling
